samples/_failures_safe/1761094500_306b68_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b77721dc.c: In function ‘main’:
./samples/SAFE/__tmp_b77721dc.c:170:12: error: missing terminating " character
  170 |     printf("\nTokens
      |            ^~~~~~~~~
./samples/SAFE/__tmp_b77721dc.c:170:5: error: expected expression at end of input
  170 |     printf("\nTokens
      |     ^~~~~~
./samples/SAFE/__tmp_b77721dc.c:170:5: error: expected declaration or statement at end of input
